update plots again

--- a/figures/fosr-2s.tex
+++ b/figures/fosr-2s.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2023-03-27 19:33:31
+% Created by tikzDevice version 0.12.3.1 on 2023-03-27 19:38:58
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -16,30 +16,6 @@
 
 \path[fill=fillColor] ( 20.71, 20.71) rectangle (449.74,319.67);
 \definecolor{drawColor}{gray}{0.92}
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 54.00) --
-	(449.74, 54.00);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71,130.14) --
-	(449.74,130.14);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71,206.28) --
-	(449.74,206.28);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71,282.42) --
-	(449.74,282.42);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 93.25, 20.71) --
-	( 93.25,319.67);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (200.40, 20.71) --
-	(200.40,319.67);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (307.56, 20.71) --
-	(307.56,319.67);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (414.71, 20.71) --
-	(414.71,319.67);
 
 \path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 92.07) --
 	(449.74, 92.07);
@@ -434,111 +410,111 @@
 	(430.24, 93.08);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 40.22, 78.70) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 40.22, 78.70) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 47.72, 68.54) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 47.72, 68.54) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 55.22, 70.08) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 55.22, 70.08) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 62.72, 76.79) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 62.72, 76.79) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 70.22, 58.00) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 70.22, 58.00) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 77.72,106.69) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 77.72,106.69) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 85.22, 88.40) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 85.22, 88.40) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 92.72, 55.86) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 92.72, 55.86) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (100.22,118.75) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (100.22,118.75) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (107.72, 55.51) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (107.72, 55.51) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (115.22,109.09) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (115.22,109.09) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (122.72, 85.78) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (122.72, 85.78) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (130.22, 85.53) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (130.22, 85.53) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (137.72, 96.72) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (137.72, 96.72) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (145.22,126.97) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (145.22,126.97) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (152.72,134.04) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (152.72,134.04) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (160.22,175.07) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (160.22,175.07) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (167.72,187.26) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (167.72,187.26) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (175.22,227.03) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (175.22,227.03) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (182.73,214.21) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (182.73,214.21) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (190.23,221.43) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (190.23,221.43) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (197.73,259.86) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (197.73,259.86) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (205.23,273.16) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (205.23,273.16) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (212.73,287.03) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (212.73,287.03) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (220.23,280.47) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (220.23,280.47) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (227.73,302.28) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (227.73,302.28) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (235.23,302.22) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (235.23,302.22) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (242.73,292.80) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (242.73,292.80) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (250.23,292.54) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (250.23,292.54) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (257.73,284.12) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (257.73,284.12) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (265.23,292.88) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (265.23,292.88) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (272.73,280.50) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (272.73,280.50) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (280.23,269.89) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (280.23,269.89) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (287.73,275.29) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (287.73,275.29) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (295.23,240.75) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (295.23,240.75) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (302.73,246.63) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (302.73,246.63) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (310.23,224.48) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (310.23,224.48) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (317.73,240.49) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (317.73,240.49) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (325.23,223.77) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (325.23,223.77) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (332.74,211.20) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (332.74,211.20) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (340.24,214.49) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (340.24,214.49) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (347.74,171.05) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (347.74,171.05) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (355.24,147.70) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (355.24,147.70) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (362.74,138.42) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (362.74,138.42) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (370.24, 93.85) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (370.24, 93.85) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (377.74, 93.02) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (377.74, 93.02) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (385.24, 58.89) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (385.24, 58.89) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (392.74, 30.50) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (392.74, 30.50) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (400.24, 53.79) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (400.24, 53.79) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (407.74, 44.83) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (407.74, 44.83) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (415.24, 80.42) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (415.24, 80.42) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (422.74, 73.37) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (422.74, 73.37) {$\upbeta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (430.24, 95.01) {x};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (430.24, 95.01) {$\upbeta$};
 \definecolor{drawColor}{gray}{0.20}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 20.71) rectangle (449.74,319.67);
@@ -554,30 +530,5 @@
 \definecolor{drawColor}{RGB}{0,0,0}
 
 \node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,170.19) {$\widehat{\beta} (t)$};
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (455.24,325.17);
-\definecolor{drawColor}{RGB}{211,211,211}
-\definecolor{fillColor}{RGB}{255,255,255}
-
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] ( 15.66,266.83) rectangle (197.38,297.78);
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (455.24,325.17);
-\definecolor{fillColor}{RGB}{255,255,255}
-
-\path[fill=fillColor] ( 21.16,272.33) rectangle ( 35.62,286.78);
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (455.24,325.17);
-\definecolor{drawColor}{RGB}{139,0,0}
-
-\path[draw=drawColor,line width= 1.7pt,line join=round] ( 22.61,279.55) -- ( 34.17,279.55);
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (455.24,325.17);
-\definecolor{drawColor}{RGB}{0,0,0}
-
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.00] at ( 41.12,276.11) {Smoothed coefficient function $\widehat{\upbeta} (t)$};
 \end{scope}
 \end{tikzpicture}
