--- a/figures/gcv-plot.tex
+++ b/figures/gcv-plot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2023-03-25 20:51:11
+% Created by tikzDevice version 0.12.3.1 on 2023-03-27 19:39:23
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -5329,8 +5329,8 @@
 
 \node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,163.79) {Angle ($^{\circ}$)};
 \end{scope}
-\end{tikzpicture}
-h[clip] (341.43,  0.00) rectangle (682.86,318.67);
+\begin{scope}
+\path[clip] (341.43,  0.00) rectangle (682.86,318.67);
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
