Updates from Overleaf

--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -9,4 +9,5 @@
 \include{figures/gaitrec-mean-covar}
 \include{figures/gcv-plot}
 \include{figures/fosr-2s}
+\include{figures/fosr-dataset}
 \end{document}
