--- a/figures/fosr-coefs.tex
+++ b/figures/fosr-coefs.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2023-03-28 23:16:42
+% Created by tikzDevice version 0.12.3.1 on 2023-03-28 23:24:45
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -2298,6 +2298,6 @@
 \path[clip] (  0.00,  0.00) rectangle (455.24,318.67);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,163.64) {Parameter Estimate};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,163.64) {$\widehat{\beta} (t)$ Parameter Estimate};
 \end{scope}
 \end{tikzpicture}
