Updates from Overleaf

--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -10,4 +10,5 @@
 \include{figures/gcv-plot}
 \include{figures/fosr-2s}
 \include{figures/fosr-dataset}
+\include{figures/fosr-coefs}
 \end{document}
