add figure fpc visualisations to tex file

--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -11,4 +11,5 @@
 \include{figures/fosr-2s}
 \include{figures/fosr-dataset}
 \include{figures/fosr-coefs}
+\include{figures/fpc-visualisations}
 \end{document}
