--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -1,5 +1,7 @@
 \documentclass[tikz]{standalone}
 \usepackage{upgreek}
+\usepackage{amssymb,amsmath,caption}
+\usepackage{color}
 \begin{document}
 \include{figures/gait-data-plot.tex}
 \include{figures/amp-phase-plot.tex}
