updated colors on plot (wrong for now)

--- a/figures/fpc-visualisations.tex
+++ b/figures/fpc-visualisations.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2023-04-07 21:28:10
+% Created by tikzDevice version 0.12.3.1 on 2023-04-07 21:46:13
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -522,7 +522,7 @@
 
 \path[draw=drawColor,line width= 0.6pt,line join=round] (555.72, 31.75) --
 	(555.72,195.01);
-\definecolor{drawColor}{RGB}{248,118,109}
+\definecolor{drawColor}{RGB}{160,32,240}
 
 \path[draw=drawColor,line width= 0.9pt,line join=round] (399.10, 55.00) --
 	(400.66, 58.07) --
@@ -625,7 +625,7 @@
 	(552.59, 58.23) --
 	(554.16, 56.39) --
 	(555.72, 55.07);
-\definecolor{drawColor}{RGB}{0,176,246}
+\definecolor{drawColor}{RGB}{0,255,255}
 
 \path[draw=drawColor,line width= 0.9pt,line join=round] (399.10, 57.36) --
 	(400.66, 64.49) --
@@ -763,7 +763,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor,fill opacity=0.20] (391.27,195.01) rectangle (563.55,212.64);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.00] at (477.41,200.38) {{\color{blue}Highest} and {\color{red}Lowest} FPC1 Scores};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.00] at (477.41,200.38) {{\color{cyan}Highest} and {\color{purple}Lowest} FPC1 Scores};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (569.05,218.14);
