fix typo in strip title

--- a/figures/fpc-visualisations.tex
+++ b/figures/fpc-visualisations.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2023-04-07 21:52:02
+% Created by tikzDevice version 0.12.3.1 on 2023-04-07 21:53:28
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -753,7 +753,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor,fill opacity=0.20] (213.48,195.01) rectangle (385.77,212.64);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.00] at (299.62,200.38) {$\widehat{\mu} (t) + 2 \sqrt{\lambda_1} \widehat{\psi}_1 (t)$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.00] at (299.62,200.38) {$\widehat{\mu} (t) \pm 2 \sqrt{\lambda_1} \widehat{\psi}_1 (t)$};
 \end{scope}
 \begin{scope}
 \path[clip] (391.27,195.01) rectangle (563.55,212.64);
