change strip color

--- a/figures/fpc-visualisations.tex
+++ b/figures/fpc-visualisations.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2023-04-07 21:53:28
+% Created by tikzDevice version 0.12.3.1 on 2023-04-07 22:01:05
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -738,9 +738,9 @@
 \begin{scope}
 \path[clip] ( 35.69,195.01) rectangle (207.98,212.64);
 \definecolor{drawColor}{gray}{0.20}
-\definecolor{fillColor}{RGB}{190,190,190}
+\definecolor{fillColor}{gray}{0.85}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor,fill opacity=0.20] ( 35.69,195.01) rectangle (207.98,212.64);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] ( 35.69,195.01) rectangle (207.98,212.64);
 \definecolor{drawColor}{gray}{0.10}
 
 \node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.00] at (121.83,200.38) {$\widehat{\psi}_1 (t)$};
@@ -748,9 +748,9 @@
 \begin{scope}
 \path[clip] (213.48,195.01) rectangle (385.77,212.64);
 \definecolor{drawColor}{gray}{0.20}
-\definecolor{fillColor}{RGB}{190,190,190}
+\definecolor{fillColor}{gray}{0.85}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor,fill opacity=0.20] (213.48,195.01) rectangle (385.77,212.64);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (213.48,195.01) rectangle (385.77,212.64);
 \definecolor{drawColor}{gray}{0.10}
 
 \node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.00] at (299.62,200.38) {$\widehat{\mu} (t) \pm 2 \sqrt{\lambda_1} \widehat{\psi}_1 (t)$};
@@ -758,9 +758,9 @@
 \begin{scope}
 \path[clip] (391.27,195.01) rectangle (563.55,212.64);
 \definecolor{drawColor}{gray}{0.20}
-\definecolor{fillColor}{RGB}{190,190,190}
+\definecolor{fillColor}{gray}{0.85}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor,fill opacity=0.20] (391.27,195.01) rectangle (563.55,212.64);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (391.27,195.01) rectangle (563.55,212.64);
 \definecolor{drawColor}{gray}{0.10}
 
 \node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.00] at (477.41,200.38) {{\color{cyan}Highest} and {\color{purple}Lowest} FPC1 Scores};
