--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This repository contains the code for the Edward Gunning's thesis Chapters 1 and 2.
 
-* The $$\textsf{R}$$ codes to generate the example and create the figures are contained in the [code](code) folder :open_file_folder:.
+* The $\textsf{R}$ codes to generate the example and create the figures are contained in the [code](code) folder :open_file_folder:.
 
 * The figures are generated as .TeX files using the R package `{tikzDevice}` and stored in the [figures](figures) folder :open_file_folder:. The file [figures.tex](figures/figures.tex) file :page_facing_up: compiles them from .TeX to .pdf.
 
@@ -19,4 +19,9 @@ This repository contains the code for the Edward Gunning's thesis Chapters 1 and
 
 * Some diagrams were made manually using Powerpoint and rendered to pdf. In this case, both the .pptx and .pdf files are stored in the repository.
 
-![](figures/fun-data-in-theory.pdf)
+## Example Figure
+
+(hasn't been rendered in .tex, so labels still display LaTeX code)
+
+![](figures/gcv.png)
+
