--- a/README.Rmd
+++ b/README.Rmd
@@ -9,11 +9,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Summary
 
-This repository contains the code for the Edward Gunning's thesis Chapters 1 and 2.
+This repository contains the code for Edward Gunning's thesis Chapters 1 and 2.
 
-* The $\textsf{R}$ codes to generate the examples and create the figures are contained in the [code](code) folder :open_file_folder:.
+* The $\textsf{R}$ code to generate the examples and create the figures are contained in the [code](code) folder :open_file_folder:.
 
-* The figures are generated as .TeX files using the R package `{tikzDevice}` and stored in the [figures](figures) folder :open_file_folder:. The file [figures.tex](figures/figures.tex) file :page_facing_up: compiles them from .TeX to .pdf.
+* The figures are generated as TeX files using the R package `{tikzDevice}` and stored in the [figures](figures) folder :open_file_folder:. The file [figures.tex](figures/figures.tex) file :page_facing_up: compiles them from .tex to .pdf.
 
 * This repository is synced with Overleaf to render the [figures.tex](figures/figures.tex) file :page_facing_up:.
 
