Updates from Overleaf

--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -14,4 +14,5 @@
 \include{figures/fosr-dataset}
 \include{figures/fosr-coefs}
 \include{figures/fpc-visualisations}
+\include{figures/risc-data-plot}
 \end{document}
