update readme for making code publicly available

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,19 +9,16 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Summary
 
-This repository contains the code for Edward Gunning's thesis Chapters 1 and 2.
+This repository contains the code for Edward Gunning's Ph.D. thesis Chapters 1 and 2.
 
-* The $\textsf{R}$ code to generate the examples and create the figures are contained in the [code](code) folder :open_file_folder:.
+* The $\textsf{R}$ code to generate the examples and create the figures are contained in [code :open_file_folder:](code).
 
-* The figures are generated as TeX files using the R package `{tikzDevice}` and stored in the [figures](figures) folder :open_file_folder:. The file [figures.tex](figures/figures.tex) file :page_facing_up: compiles them from .tex to .pdf.
+* The figures are generated as TeX files using the R package `{tikzDevice}` and stored in [figures :open_file_folder:](figures). The file [figures.tex](figures/figures.tex) file :page_facing_up: compiles them from .tex to .pdf.
 
 * This repository is synced with Overleaf to render the [figures.tex](figures/figures.tex) file :page_facing_up:.
 
 * Some diagrams were made manually using Powerpoint and rendered to pdf. In this case, both the .pptx and .pdf files are stored in the repository.
 
-## Example Figure
+## Contact
 
-(hasn't been rendered in .tex, so labels still display LaTeX code)
-
-![](figures/gcv.png)
-
+📧 [Edward.Gunning@ul.ie](mailto:Edward.Gunning@ul.ie)
