--- a/README.Rmd
+++ b/README.Rmd
@@ -11,9 +11,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This repository contains the code for Edward Gunning's Ph.D. thesis Chapters 1 and 2.
 
-* The $\textsf{R}$ code to generate the examples and create the figures are contained in [code :open_file_folder:](code).
+* The $\textsf{R}$ code to generate the examples and create the figures are contained in [code :open_file_folder:](code/).
 
-* The figures are generated as TeX files using the R package `{tikzDevice}` and stored in [figures :open_file_folder:](figures). The file [figures.tex](figures/figures.tex) file :page_facing_up: compiles them from .tex to .pdf.
+* The figures are generated as TeX files using the R package `{tikzDevice}` and stored in [figures :open_file_folder:](figures/). The file [figures.tex](figures/figures.tex) file :page_facing_up: compiles them from .tex to .pdf.
 
 * This repository is synced with Overleaf to render the [figures.tex](figures/figures.tex) file :page_facing_up:.
 
